# aspisfile-desktop

./: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.next/: trace  trace-build
docs/: RELEASE.md
src/: App.css  App.tsx
src-tauri/: AspisFile.entitlements  Cargo.toml  dmg-settings.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pkg-scripts/: postinstall
src-tauri/src/: autolock.rs  commands.rs  deeplink.rs  fileassoc.rs  lib.rs  main.rs  security.rs  updater.rs
src-tauri/src/passkey/: macos.rs  mod.rs
src/components/: AuthLoadingScreen.tsx  CaptureBlackoutScreen.tsx  DebugOverlay.tsx  DelegationScreen.tsx  DownloadDeletedScreen.tsx  DownloadModal.tsx  EnrolmentScreen.tsx  IdleScreen.tsx  LegalOverlay.tsx  LockScreen.tsx  RevokedScreen.tsx  SenderApprovalWaitingScreen.tsx  SetupModal.tsx  StepUpScreen.tsx  UpdateBanner.tsx  WrongAccountScreen.tsx
src/contexts/: LockContext.tsx
src/coviewing/: CoViewingBanner.tsx  CoViewingRecipient.tsx  ControllerCursor.tsx  PresenterParticipantPanel.tsx  PresenterToolbar.tsx  SessionEndedScreen.tsx  StartSessionModal.tsx
src/lib/: access-errors.ts  afs-render.ts  audit.ts  coviewing-realtime.ts  debug-log.ts  desktopAuth.ts  download.ts  passkey.ts  recipient-session.ts  sessionStore.ts  supabase.ts  update-check.ts
src/viewer/: CommentControl.tsx  FeedbackMenu.tsx  RespondControl.tsx  SecureViewer.tsx  SignaturePad.tsx  TileRenderer.tsx
