[package]
name = "aspisfile-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aspisfile_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
open = "5.3.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
block = "0.1"
# Native AuthenticationServices bridge for in-window WebAuthn (Phase
# A+ Stage 8). objc2 family replaces the bare objc 0.2 wrappers with
# typed bindings + the declare_class! macro we need for the custom
# ASAuthorizationControllerDelegate. authentication-services crate
# exposes ASAuthorizationController + the platform-passkey provider.
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSError",
  "NSArray",
  "NSObject",
  "NSValue",
] }
objc2-authentication-services = { version = "0.2", features = [
  "ASAuthorizationController",
  "ASAuthorizationPlatformPublicKeyCredentialProvider",
  "ASAuthorizationPlatformPublicKeyCredentialRegistration",
  "ASAuthorizationPlatformPublicKeyCredentialRegistrationRequest",
  "ASAuthorizationPlatformPublicKeyCredentialAssertion",
  "ASAuthorizationPlatformPublicKeyCredentialAssertionRequest",
  "ASAuthorizationPlatformPublicKeyCredentialDescriptor",
  "ASAuthorizationPublicKeyCredentialDescriptor",
  "ASAuthorizationPublicKeyCredentialAssertion",
  "ASAuthorizationPublicKeyCredentialRegistration",
  "ASAuthorizationRequest",
  "ASAuthorizationCredential",
  "ASAuthorizationProvider",
  "ASAuthorization",
  "ASAuthorizationError",
] }
objc2-app-kit = { version = "0.2", features = [
  "NSWindow",
  "NSApplication",
  "NSView",
] }
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Security_Credentials_UI", "Foundation"] }

